# UML-NOW-CLI

./: README.md  pyproject.toml  umlnow.bat
experimental/: course-ng.py  course.py  initalize_db.py  initialize.py
experimental/ChromaDB/: chroma.sqlite3
scripts/: print_type_structure.py
umlnow/: course-ng.py
umlnow/ChromaDB/: chroma.sqlite3
