[tool.poetry]
name = "umlnow"
version = "1.0.0"
description = "A Command Line Interface for the University of Massachusetts Lowell's NOW Student Dashboard API."
authors = ["Martin Marwad"]
license = "LISCENSE"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fire = {git = "https://github.com/google/python-fire.git"}
bs4 = "^0.0.2"
playwright = "^1.41.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
bumpver = "^2023.1129"
isort = "^5.13.2"
pip-tools = "^7.4.0"
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
